--- a/k8s/atpsoda/kustomization.yaml
+++ b/k8s/atpsoda/kustomization.yaml
@@ -7,7 +7,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-patchesStrategicMerge:
+bases:
+  - ./
+
+resources:
   - carts/app.yaml
   - catalog/app.yaml
   - orders/app.yaml
