--- a/k8s/atpsoda/users/app.yaml
+++ b/k8s/atpsoda/users/app.yaml
@@ -11,6 +11,10 @@ metadata:
   labels:
     component: sockshop
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: users
   template:
     spec:
       volumes:
