--- a/k8s/atpsoda/catalog/app.yaml
+++ b/k8s/atpsoda/catalog/app.yaml
@@ -13,6 +13,10 @@ metadata:
 spec:
   template:
     spec:
+      replicas: 1
+      selector:
+        matchLabels:
+          app: catalog
       volumes:
       - name: atp-secret
         secret:
