--- a/k8s/atpsoda/carts/app.yaml
+++ b/k8s/atpsoda/carts/app.yaml
@@ -16,6 +16,9 @@ spec:
     matchLabels:
       app: carts
   template:
+    metadata:
+      labels:
+        app: carts
     spec:
       volumes:
       - name: atp-secret
