--- a/k8s/atpsoda/users/app.yaml
+++ b/k8s/atpsoda/users/app.yaml
@@ -16,6 +16,9 @@ spec:
     matchLabels:
       app: users
   template:
+    metadata:
+      labels:
+        app: users
     spec:
       volumes:
       - name: atp-secret
